--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ pathtools==0.1.2
 pickleshare==0.7.5
 Pillow==7.2.0
 pipreqs==0.4.10
+plotly==4.10.0
 prometheus-client==0.8.0
 prompt-toolkit==3.0.6
 protobuf==3.13.0
